<resources>
    <string name="app_name">BaiduMapDemo</string>
    <string name="museumname">XX博物馆(4A)</string>
    <string name="entermap">进入地图页</string>
    <string name="address">北京市西城区xx路外大街99号</string>
    <string name="sososo">博物馆评分</string>
    <string name="entercomments">前往评价</string>
    <string name="upload">上传讲解</string>
    <string name="menu_title_museum_information">博物馆信息</string>
    <string name="menu_title_collection_information">藏品信息</string>
    <string name="menu_title_exhibition_information">展览信息</string>
    <string name="menu_title_news">新闻</string>
    <string name="time">周二至周日 全天 09：00-17：00\n周一 全天 固定闭馆</string>
    <string name="register_surface">用户注册</string>
    <string name="identity_text">用户名:</string>
    <string name="password_text">密 码:</string>
    <string name="mailbox_text">邮 箱:</string>
    <string name="input_mailbox_text"></string>
    <string name="phonenumber_text">号码:</string>
    <string name="input_phonenumber_text"></string>
    <string name="surface2_register_button">注册</string>
    <string name="register_message">注册成功!</string>
    <string name="surface2_message">不能为空!</string>


</resources>
