<?xml version="1.0" encoding="utf-8"?>
<!-- 郭紫玉 个人信息页面-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guoziyu.personalifo">

        <LinearLayout

            android:layout_width="413dp"
            android:layout_height="796dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register_surface"
                    android:textColor="#ff000000"
                    android:textSize="25dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="107dp"
                    android:orientation="horizontal">

                        <TextView
                            android:layout_width="103dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="50dp"
                            android:text="@string/identity_text"
                            android:textColor="#ff000000"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="50dp"
                            android:hint="请输入用户名"
                            android:maxLines="1"
                            android:textSize="18dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="@string/password_text"
                            android:textColor="#ff000000"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:hint="请输入密码"
                            android:maxLines="1"
                            android:textSize="18dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="@string/mailbox_text"
                            android:textColor="#ff000000"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/mail"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:hint="请输入邮箱"
                            android:maxLines="1"
                            android:textSize="18dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="@string/phonenumber_text"
                            android:textColor="#ff000000"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/mobile"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:hint="请输入您的手机号码"
                            android:maxLines="1"
                            android:textSize="18dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/sign"
                    android:layout_width="109dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape"
                    android:text="确定"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>